# wechatcustomchatbot

./: .env.example  .gitignore  README.md  config.yaml.example  pyproject.toml
assets/gifs/: README.txt
bot/: config.py  connector.py  connector_stub.py  db.py  giflib.py  llm.py  main.py  models.py  planner.py  policy.py  scheduler.py  utils.py
connectors/: template_adapter.py
scripts/: send_test_event.py
wechatcustomchatbot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
